workshop-10/manifests/certs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "off"
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/my-web-certs"
  name: web-ingress
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - hello-world.info
    secretName: my-web-certs
